tests/rosetta/out/Java/24-game.error
javac: exit status 1
/tmp/M24Game.java:44: error: '.class' expected
                stack.add(float(Integer.parseInt(String.valueOf(ch)) - Integer.parseInt(String.valueOf("0"))));
                               ^
/tmp/M24Game.java:44: error: not a statement
                stack.add(float(Integer.parseInt(String.valueOf(ch)) - Integer.parseInt(String.valueOf("0"))));
                                                                     ^
/tmp/M24Game.java:44: error: ';' expected
                stack.add(float(Integer.parseInt(String.valueOf(ch)) - Integer.parseInt(String.valueOf("0"))));
                                                                                                            ^
3 errors
